--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@ input[type=submit]:hover{
 <body class="main" style="background-color:#e6e6e6">
  <div class="sidenav">
   <ul>
-   <li><a href="home.html">Home</a></li>
+   <li><a href="index.html">Home</a></li>
    <li><a href="artforms.html">Art Forms</a></li>
    <li><a href="gallery.html">Gallery</a></li>
    <li><a href="festival.html">Festivals</a></li>
@@ -87,7 +87,7 @@ input[type=submit]:hover{
   </ul>
  </div><br>
  <div>
- <a href="home.html"><center>
+ <a href="index.html"><center>
  <img style="background-color:#f2f2f2;box-shadow:10px 5px 2px #0ff000;" src="logo.png" alt="KeralaTradition" width="100" height="100"></a>
    <p style="color:blue;font:30px Lato,Lucida Handwriting;text-shadow:2px 1px 1px #333333"><b><u>KeralaTradition</u></b></p></center>
  <h1 style="text-align:center;color:red;text-shadow:2px 1px 1px #333333;">CONTACT FORM</h1>
