--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ body {
  <body class="main">
 <div style="background-image:url(k1.jpg);background-attachment:fixed;background-position:center;background-size:cover;">
  <div class="" >
-  <a href="home.html"><center>
+  <a href="index.html"><center>
     <img style="background-color:#f2f2f2;box-shadow:10px 5px 2px #0ff000;" src="logo.png" alt="KeralaTradition" width="100" height="100"></a>
       <p style="color:blue;font:30px Lato,Lucida Handwriting;text-shadow:2px 1px 1px #333333"><b><u>KeralaTradition</u></b></p></center>
  </div>
  <div class="sidenav">
   <ul>
-   <li class="active"><a href="home.html">Home</a></li>
+   <li class="active"><a href="index.html">Home</a></li>
    <li><a href="artforms.html">Art Forms</a></li>
    <li><a href="gallery.html">Gallery</a></li>
    <li><a href="festival.html">Festivals</a></li>
